# tree-sitter-org

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  log.html  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-org.pc.in
bindings/c/tree_sitter/: tree-sitter-org.h
bindings/go/: binding.go  binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_org/: __init__.py  binding.c
bindings/swift/TreeSitterOrgTests/: TreeSitterOrgTests.swift
corpus/: basic.tst  test.tst
queries/: links.scm
src/: grammar.json  node-types.json  parser.c
